--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -26,6 +26,7 @@
     "pg": "^8.3.0",
     "react": "~16.8.0",
     "react-dom": "~16.8.0",
+    "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.0.0",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
